// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Masto addAccountToList 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/lists/123123/accounts",
      Object {
        "account_ids": Array [
          "123",
          "456",
          "678",
        ],
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto addPushSubscription 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/push/subscription",
      Object {
        "data": Object {
          "alerts": Object {
            "favourite": true,
            "follow": true,
            "mention": true,
            "reblog": true,
          },
        },
        "subscription": Object {
          "endpoint": "https://example.com",
          "keys": Object {
            "auth": "yyyy",
            "p256dh": "xxxx",
          },
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto authorizeFollowRequest 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/follow_requests/123123/authorize",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto blockAccount 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/accounts/123123/block",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto blockDomain 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/domain_blocks",
      Object {
        "domain": "example.com",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto clearNotifications 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/notifications/clear",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto createAccount 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/accounts",
      Object {
        "agreement": true,
        "email": "example@example.com",
        "password": "password",
        "username": "username",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto createApp 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/apps",
      Object {
        "client_name": "My Client",
        "redirect_uris": "https://example.com",
        "scopes": "write read",
        "website": "https://example.com",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto createFiler 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/filters",
      Object {
        "context": Array [
          "home",
          "notifications",
          "public",
          "thread",
        ],
        "expires_in": 3600000,
        "irreversible": true,
        "phrase": "Twitter",
        "whole_word": true,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto createList 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/lists",
      Object {
        "title": "My list",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto createStatus with Idempotency-Key 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/statuses",
      Object {
        "status": "Too!",
      },
      Object {
        "headers": Object {
          "Idempotency-Key": "59fe7e30-1a74-4050-8af7-5a8c7a224794",
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto createStatus with content 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/statuses",
      Object {
        "in_reply_to_id": "123123",
        "language": "en",
        "poll": Object {
          "expires_in": 60000,
          "hide_totals": true,
          "multiple": false,
          "options": Array [
            "xxx",
            "yyy",
            "zzz",
          ],
        },
        "scheduled_at": "2019-03-28T04:39:31.121Z",
        "sensitive": false,
        "spoiler_text": "spoiler",
        "status": "Toot!",
        "visibility": "direct",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto createStatus with media ids 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/statuses",
      Object {
        "media_ids": Array [
          "123",
          "456",
        ],
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto dissmissNotification 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/notifications/dismiss",
      Object {
        "id": "123123",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto favouriteStatus 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/statuses/123123/favourite",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchAccessToken with authorization code 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/oauth/token",
      Object {
        "client_id": "123123123",
        "client_secret": "456456456",
        "code": "789789789",
        "grant_type": "authorization_code",
        "redirect_uri": "https://example.com",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchAccessToken with password 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/oauth/token",
      Object {
        "grant_type": "password",
        "password": "password",
        "username": "username",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchAccount 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/accounts/123123123",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchAccountFollowers 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/accounts/123123123/followers",
      Object {
        "limit": 10,
        "max_id": "5",
        "min_id": "2",
        "since_id": "3",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchAccountFollowing 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/accounts/123123123/following",
      Object {
        "limit": 10,
        "max_id": "5",
        "min_id": "2",
        "since_id": "3",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchAccountIdentityProofs 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/accounts/123123123/identity_proofs",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchAccountLists 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/accounts/123123/lists",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchAccountRelationships 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/accounts/relationship",
      Object {
        "id": Array [
          "123123",
          "456456",
        ],
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchAccountStatuses 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/accounts/123123123/statuses",
      Object {
        "limit": 10,
        "max_id": "5",
        "min_id": "2",
        "since_id": "3",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchBlocks 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/blocks",
      Object {
        "limit": 10,
        "max_id": "5",
        "min_id": "2",
        "since_id": "3",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchCommunityTimeline 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/timelines/public",
      Object {
        "limit": 10,
        "local": true,
        "max_id": "5",
        "min_id": "2",
        "since_id": "3",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchConversations 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/conversations",
      Object {
        "limit": 10,
        "max_id": "5",
        "min_id": "2",
        "since_id": "3",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchCustomEmojis 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/custom_emojis",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchDirectTimeline 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/timelines/direct",
      Object {
        "limit": 10,
        "max_id": "5",
        "min_id": "2",
        "since_id": "3",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchDomainBlocks 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/domain_blocks",
      undefined,
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchEndorsements 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/endorsements",
      Object {
        "limit": 10,
        "max_id": "5",
        "min_id": "2",
        "since_id": "3",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchFavourites 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/favourites",
      Object {
        "limit": 10,
        "max_id": "5",
        "min_id": "2",
        "since_id": "3",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchFilter 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/filters/123123",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchFilters 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/filters",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchFollowRequests 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/follow_requests",
      Object {
        "limit": 10,
        "max_id": "5",
        "min_id": "2",
        "since_id": "3",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchHomeTimeline 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/timelines/home",
      Object {
        "limit": 10,
        "max_id": "5",
        "min_id": "2",
        "since_id": "3",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchInstance 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/instance",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchInstanceActivity 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/instance/activity",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchInstancesPeers 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/instance/peers",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchList 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/lists/123123",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchListAccounts 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/list/123123/accounts",
      Object {
        "limit": 10,
        "max_id": "5",
        "min_id": "2",
        "since_id": "3",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchListTimeline 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/timelines/list/123123",
      Object {
        "limit": 10,
        "max_id": "5",
        "min_id": "2",
        "since_id": "3",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchLists 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/lists",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchMutes 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/mutes",
      Object {
        "limit": 10,
        "max_id": "5",
        "min_id": "2",
        "since_id": "3",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchNotification 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/notifications/123123",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchNotifications 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/notifications",
      Object {
        "exclude_types": Array [
          "favourite",
          "follow",
          "mention",
          "poll",
          "reblog",
        ],
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchPoll 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/polls/123123",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchPreferences 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/preferences",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchPublicTimeline 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/timelines/public",
      Object {
        "limit": 10,
        "max_id": "5",
        "min_id": "2",
        "since_id": "3",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchPushSubscription 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "data": undefined,
        "headers": Object {
          "Content-Type": "application/json",
        },
        "method": "GET",
        "params": Object {},
        "transformResponse": Array [
          [Function],
        ],
        "url": "https://example.com/api/v1/push/subscription",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`Masto fetchScheduledStatus 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/scheduled_statuses/123123",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchScheduledStatuses 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/scheduled_statuses",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchStatus 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/statuses/123123",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchStatusCard 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/statuses/123123/card",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchStatusContext 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/statuses/123123/context",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchStatusFavouritedBy 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/statuses/123123/favourited_by",
      Object {
        "limit": 10,
        "max_id": "5",
        "min_id": "2",
        "since_id": "3",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchStatusRebloggedBy 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/statuses/123123/reblogged_by",
      Object {
        "limit": 10,
        "max_id": "5",
        "min_id": "2",
        "since_id": "3",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchSuggestions 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/suggestions",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto fetchTagTimeline 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/timelines/tag/DeleteTwitter",
      Object {
        "limit": 10,
        "max_id": "5",
        "min_id": "2",
        "since_id": "3",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto followAccount 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/accounts/123123/follow",
      Object {
        "reblogs": false,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto followAccountByUsername 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/follows",
      Object {
        "uri": "user@example.com",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto muteAccount 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/accounts/123123/mute",
      Object {
        "notifications": false,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto muteStatus 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/statuses/123123/mute",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto pinAccount 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/accounts/123123/pin",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto pinStatus 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/statuses/123123/pin",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto reblogStatus 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/statuses/123123/reblog",
      Object {
        "visibility": "direct",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto rejectFollowRequest 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/follow_requests/123123/reject",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto removeAccountFromList 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/lists/123123/accounts",
      Object {
        "account_ids": Array [
          "123",
          "456",
          "678",
        ],
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto removeFilter 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/filters/123123",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto removeList 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/lists/123123",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto removePushSubscription 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/push/subscription",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto removeScheduledStatus 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/scheduled_statuses/123123",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto removeStatus 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/statuses/123123",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto removeSuggestion 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/suggestions/123123",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto reportAccount 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/reports",
      Object {
        "account_id": "123123",
        "comment": "this is a report",
        "forward": true,
        "status_ids": Array [
          "456456",
        ],
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto revokeAccessToken 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/oauth/revoke",
      Object {
        "client_id": "123123123",
        "client_secret": "456456456",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto search (v1) 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/search",
      Object {
        "q": "query",
        "resolve": true,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto search 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v2/search",
      Object {
        "account_id": "123",
        "limit": 10,
        "max_id": "5",
        "min_id": "2",
        "q": "query",
        "resolve": true,
        "since_id": "3",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto searchAccounts 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/accounts/search",
      Object {
        "following": false,
        "limit": 123,
        "q": "query",
        "resolve": true,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto streamCommunityTimeline 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/streaming",
      Object {
        "stream": "public:local",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto streamDirectTimeline 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/streaming",
      Object {
        "stream": "direct",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto streamListTimeline 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/streaming",
      Object {
        "list": "123123",
        "stream": "list",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto streamLocalTagTimeline 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/streaming",
      Object {
        "stream": "hashtag:local",
        "tag": "deletetwitter",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto streamPublicTimeline 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/streaming",
      Object {
        "stream": "public",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto streamTagTimeline 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/streaming",
      Object {
        "stream": "hashtag",
        "tag": "deletetwitter",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto streamUser 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/streaming",
      Object {
        "stream": "user",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto unblockAccount 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/accounts/123123/unblock",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto unblockDomain 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "data": "{\\"domain\\":\\"example.com\\"}",
        "headers": Object {
          "Content-Type": "application/json",
        },
        "method": "DELETE",
        "transformResponse": Array [
          [Function],
        ],
        "url": "https://example.com/api/v1/domain_blocks",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`Masto unfavouriteStatus 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/statuses/123123/unfavourite",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto unfollowAccount 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/accounts/123123/unfollow",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto unmuteAccount 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/accounts/123123/unmute",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto unmuteStatus 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/statuses/123123/unmute",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto unpinAccount 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/accounts/123123/unpin",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto unpinStatus 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/statuses/123123/unpin",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto unreblogStatus 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/statuses/123123/unreblog",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto updateFilter 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/filters/123123",
      Object {
        "context": Array [
          "home",
          "notifications",
          "public",
          "thread",
        ],
        "expires_in": 3600000,
        "irreversible": true,
        "phrase": "Twitter",
        "whole_word": true,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto updateList 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/lists/123123",
      Object {
        "title": "My list",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto updateMediaAttachment 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/media/123123",
      Object {
        "description": "Nice image",
        "focus": "0, 0",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto updatePushSubscription 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/push/subscription",
      Object {
        "data": Object {
          "alerts": Object {
            "favourite": true,
            "follow": true,
            "mention": true,
            "reblog": true,
          },
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto updateScheduledStatus 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/scheduled_statuses/123123",
      Object {
        "scheduled_at": "2019-03-28T04:39:31.121Z",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto verifyAppCredentials 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/apps/verify_credentials",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto verifyCredentials 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/accounts/verify_credentials",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Masto votePoll 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/api/v1/polls/123123/votes",
      Object {
        "choices": Array [
          "xxx",
          "yyy",
          "zzz",
        ],
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
